fixed bugs desvweb1

--- a/devWebI/atividade-reproducao-pagina/index.html
+++ b/devWebI/atividade-reproducao-pagina/index.html
@@ -78,20 +78,20 @@
         Decisão ainda não é definitiva, mas até que haja uma ordem final, a
         Monumental Praça de Touros da Cidade do México ficará fechada.
       </p>
-      <p class="small text-muted">
-        Por g1<br />14/06/2022 05h03 · Atualizado há 42 minutos
-      </p>
+      <div class="container small mt-2">
+        <p class="bold">Por g1</p>
+        <p class="text-muted">14/06/2022 05h03 · Atualizado há 42 minutos</p>
+      </div>
     </div>
 
     <!-- Imagem Principal -->
     <div class="container my-4">
       <div class="container col-6">
-
         <img
-        class="img-fluid"
-        src="./src/img/img-noticia.webp"
-        class="img-fluid rounded"
-        alt="Praça de Touros"
+          class="img-fluid"
+          src="./src/img/img-noticia.webp"
+          class="img-fluid rounded"
+          alt="Praça de Touros"
         />
         <p class="text-muted small content-media__description">
           Imagem da Monumental Praça de Touros da Cidade do México — Foto:
