--- a/devWebI/atividade-reproducao-pagina/index.html
+++ b/devWebI/atividade-reproducao-pagina/index.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <nav
-      class="acesso-rapido d-flex flex-nowrap justify-content-center navbar-expand-lg bg-body-tertiary"
+      class="acesso-rapido d-flex flex-nowrap justify-content-center navbar-expand-lg bg-body-tertiary border-bottom border-secondary"
     >
       <!-- links de acesso rapido -->
       <ul class="w-75 d-flex justify-content-end align-items-center">
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Cabeçalho e Título -->
-    <div class="content-publication-data container mt-4 col-6">
+    <div class="container mt-4 col-6 border-bottom border-secondary">
       <h1 class="content-head__title">
         Em defesa dos animais, Justiça mexicana proíbe touradas na maior arena
         do mundo
@@ -101,10 +101,12 @@
     </div>
 
     <!-- Corpo da Notícia -->
-    <article class="articleBody container mb-5 col-7">
+    <article
+      class="articleBody container border-bottom border-secondary mb-5 col-7"
+    >
       <!-- informações da noticia com anuncio -->
       <section class="d-flex flex-nowrap">
-        <div class="bg-dev-focus-2 adware-container-info container d-flex flex-wrap gap-lg-3">
+        <div class="adware-container-info container d-flex flex-wrap gap-lg-3">
           <p>
             A maior arena de touradas do mundo, na Cidade do
             <strong class="text-danger">México</strong>, foi proibida de receber
@@ -129,7 +131,7 @@
       <!-- Links relacionados -->
       <div class="my-4">
         <h5 class="fw-bold">Leia também</h5>
-        <ul>
+        <ul class="links-leia-tambem container d-flex flex-wrap fs-5 fw-bold">
           <li>
             <a href="#" class="text-danger"
               >Toureiro passa lenço em testa de touro antes de matá-lo e gera
@@ -157,25 +159,38 @@
     </article>
 
     <!-- Imagem inferior (newsletter ou propaganda) -->
-    <div class="container text-center my-5">
-      <img
-        src="./src/img/img-fundo.png"
-        class="img-fluid"
-        alt="Resumo do dia"
-      />
-      <div class="mt-2">
-        <button class="btn btn-danger">
+    <section class="container d-flex flex-nowrap my-lg-5 col-7">
+      <div class="container d-flex w-50">
+        <img
+          src="./src/img/img-fundo.png"
+          class="img-fluid"
+          alt="Resumo do dia"
+        />
+      </div>
+      <div class="container d-flex w-50 flex-wrap mt-2">
+        <h3 class="fw-bold">Resumo do dia</h3>
+
+        <p>As notícias que voce não vai perder diariamente no seu e-mail.</p>
+
+        <p>Para se inscrever, entre ou crie uma Conta Globo gratuita</p>
+
+        <button class="btn btn-outline-danger">
           Inscreva-se e receba a newsletter
         </button>
       </div>
-    </div>
+    </section>
 
     <!-- Rodapé com comentários -->
-    <div class="container text-center mb-5">
+    <div class="container d-flex flex-wrap mb-5 col-6">
       <h5 class="bold">Comentários (29)</h5>
-      <button class="btn btn-outline-secondary mt-2">
-        Clique aqui para fazer login
-      </button>
+
+      <div class="container border border-secondary d-flex flex-wrap justify-content-center text-center gap-1">
+        <p class="w-100">Acesse sua Conta Globo e participe da conversa</p>
+
+        <button class="btn btn-outline-secondary w-50 my-2">
+          Clique aqui para fazer login
+        </button>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
