Adicionar funcionalidade de cadastro e listagem de atores, incluindo servlets e páginas JSP correspondentes

--- a/devWebII/entrega0/src/main/webapp/index.html
+++ b/devWebII/entrega0/src/main/webapp/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Locadora - Início</title>
+</head>
+<body>
+    <h1>Bem-vindo à Locadora</h1>
+
+    <ul>
+        <li><a href="FormCadastrarAtor.html">Cadastrar Ator</a></li>
+        <li><a href="CrtCadastrarAtor">Listar Atores</a></li>
+    </ul>
+</body>
 </html>
