--- a/devWebII/locadora/frontend/index.html
+++ b/devWebII/locadora/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo/video-locadora-retro-logo.png" />
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../main.jsx"></script>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
