corrigindo bugs no mercadim

--- a/dispositivosmoveis/mercadim/web/index.html
+++ b/dispositivosmoveis/mercadim/web/index.html
@@ -31,6 +31,8 @@
 
   <title>mercadim</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_API_GOOGLE_AQUI&libraries=places"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
